修正分享的字符错误。

--- a/index.html
+++ b/index.html
@@ -605,8 +605,7 @@
 <script type="text/javascript" >
 var jiathis_config={
   url:"http://lexrus.github.com/fontdiao",
-  summary:"中文网站前端屌丝码农的逆袭",
-  title:"Font屌 ##Font屌#",
+  title:"#Font屌#中文网站前端屌丝码农的逆袭",
   ralateuid:{
     "tsina":"1747002695"
   },
