--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="carousel-inner">
       <div class="active item"><div><i class="icon-weibo"></i></div></div>
       <div class="item"><div><i class="icon-xunlei"></i></div></div>
-      <div class="item"><div><i class="icon-58"></i></div></div>
+      <div class="item"><div><i class="icon-kuangpai"></i></div></div>
       <div class="item"><div><i class="icon-baidu"></i></div></div>
       <div class="item"><div><i class="icon-cctv"></i></div></div>
       <div class="item"><div><i class="icon-douban"></i></div></div>
@@ -76,6 +76,11 @@
       <div class="item"><div><i class="icon-lianmeng"></i></div></div>
       <div class="item"><div><i class="icon-alibaba"></i></div></div>
       <div class="item"><div><i class="icon-alipay"></i></div></div>
+      <div class="item"><div><i class="icon-youdao"></i></div></div>
+      <div class="item"><div><i class="icon-yinlian"></i></div></div>
+      <div class="item"><div><i class="icon-miliao"></i></div></div>
+      <div class="item"><div><i class="icon-kds"></i></div></div>
+      <div class="item"><div><i class="icon-dongfangweishi"></i></div></div>
     </div>
     <!-- Carousel nav -->
     <a class="carousel-control left" href="#iconCarousel" data-slide="prev">
@@ -89,7 +94,7 @@
       <a href="http://fortawesome.github.com/Font-Awesome/" target="_blank">FontAwesome</a> 非官方中文分支</p>
     <div class="actions">
       <a class="btn btn-primary btn-large" href="https://github.com/lexrus/fontdiao/zipball/master">
-        <i class="icon-download"></i>下载 Font屌 v0.0.1</a>
+        <i class="icon-download"></i>下载 Font屌 v0.0.2</a>
       <a class="btn btn-large btn-github" href="https://github.com/lexrus/fontdiao" target="_blank">
         <i class="icon-github"></i>访问 GitHub</a>
     </div>
@@ -102,40 +107,30 @@
       <a class="btn" href="https://github.com/lexrus/fontdiao" target="_blank"><i class="icon-github"></i> Watch</a>
       <a id="watchers" class="count btn" href="https://github.com/lexrus/fontdiao">1+</a>
     </span>
-    <span class="fork">
-      <a class="btn" href="https://github.com/lexrus/fontdiao" target="_blank"><i class="icon-github"></i> Fork</a>
-      <a id="forks" class="count btn" href="#">1+</a>
-    </span>
     <span class="follow">
       <a class="btn" href="http://twitter.com/lexrus/" target="_blank"><i class="icon-twitter"></i> Follow @lexrus</a>
-      <span class="arrow-right"></span><span id="followers" class="count btn">1+</span>
     </span>
     <span class="follor">
       <a class="btn" href="http://weibo.com/lexrus/" target="_blank"><i class="icon-weibo"></i> 关注 @汤圣罡</a>
     </span>
-  </div>
-  <div class="row">
-    <p class="container">
-      <!-- JiaThis Button BEGIN -->
-      <div class="alert alert-success jiathis_style span7 offset2">
+    <!-- JiaThis Button BEGIN -->
+      <span class="jiathis_style span4 pull-right">
         <button type="button" class="close" data-dismiss="alert">×</button>
-        <div class="pull-right">{#Lex:这条位图下一版改成矢量图#}</div>
-        <a class="jiathis_button_qzone"></a>
         <a class="jiathis_button_tsina"></a>
         <a class="jiathis_button_tqq"></a>
         <a class="jiathis_button_renren"></a>
-        <a class="jiathis_button_kaixin001"></a>
-        <a class="jiathis_button_fav"></a>
-        <a class="jiathis_button_taobao"></a>
         <a class="jiathis_button_douban"></a>
-        <a class="jiathis_button_google"></a>
         <a class="jiathis_button_fb"></a>
         <a class="jiathis_button_googleplus"></a>
         <a class="jiathis_button_twitter"></a>
         <a href="http://www.jiathis.com/share" class="jiathis jiathis_txt jiathis_separator jtico jtico_jiathis" target="_blank"></a>
         <a class="jiathis_counter_style"></a>
-      </div>
+      </span>
       <!-- JiaThis Button END -->
+  </div>
+  <div class="row">
+    <p class="container">
+      
     </p>
   </div>
 </section>
@@ -157,8 +152,8 @@
   </div>
   <div class="row">
     <div class="span4">
-      <h3><i class="icon-flag icon-large"></i> 一个字体包含 20 多个图标</h3>
-      客户端浏览器只下载一个字体，就能拥有 20 多个常用网站的图标。
+      <h3><i class="icon-flag icon-large"></i> 一个字体包含 40 多个图标</h3>
+      客户端浏览器只下载一个字体，就能拥有 40 多个常用中文网站的图标。
     </div>
     <div class="span4">
       <h3><i class="icon-gift icon-large"></i> 可用于商业应用</h3>
@@ -167,7 +162,7 @@
     <div class="span4">
       <h3><i class="icon-ok icon-large"></i> 支持 IE7</h3>
 
-      和 <a href="http://fortawesome.github.com/Font-Awesome/" target="_blank">FontAwesome</a> 一样，Font屌 v0.0.1 支持 IE7。
+      和 <a href="http://fortawesome.github.com/Font-Awesome/" target="_blank">FontAwesome</a> 一样，Font屌 支持 IE7。
     </div>
   </div>
   <div class="row">
@@ -202,6 +197,10 @@
       <li><i class="icon-baidu"></i> icon-baidu</li>
       <li><i class="icon-alibaba"></i> icon-alibaba</li>
       <li><i class="icon-alipay"></i> icon-alipay</li>
+      <li><i class="icon-miliao"></i> icon-miliao</li>
+      <li><i class="icon-pps"></i> icon-pps</li>
+      <li><i class="icon-qicheren"></i> icon-qicheren</li>
+      <li><i class="icon-yinlian"></i> icon-yinlian</li>
     </ul>
   </div>
 
@@ -213,6 +212,10 @@
       <li><i class="icon-tmall"></i> icon-tmall</li>
       <li><i class="icon-v2ex"></i> icon-v2ex</li>
       <li><i class="icon-wangyi"></i> icon-wangyi</li>
+      <li><i class="icon-kuangpai"></i> icon-kuangpai</li>
+      <li><i class="icon-letv"></i> icon-letv</li>
+      <li><i class="icon-shanghaidianshitai"></i> icon-shanghaidianshitai</li>
+      <li><i class="icon-youdao"></i> icon-youdao</li>
     </ul>
   </div>
 
@@ -224,17 +227,23 @@
       <li><i class="icon-qq"></i> icon-qq</li>
       <li><i class="icon-renren"></i> icon-renren</li>
       <li><i class="icon-ctrip"></i> icon-ctrip</li>
+      <li><i class="icon-fenghuangweishi"></i> icon-fenghuangweishi</li>
+      <li><i class="icon-kds"></i> icon-kds</li>
+      <li><i class="icon-tengxunshipin"></i> icon-tengxunshipin</li>
     </ul>
   </div>
 
   <div class="span3">
     <ul class="the-icons">
-      <li><i class="icon-weibo"></i> icon-weibo</li>
+      <li><i class="icon-dongfangweishi"></i> icon-dongfangweishi</li>
       <li><i class="icon-xunlei"></i> icon-xunlei</li>
       <li><i class="icon-yihaodian"></i> icon-yihaodian</li>
       <li><i class="icon-buluo"></i> icon-buluo</li>
       <li><i class="icon-lianmeng"></i> icon-lianmeng</li>
       <li><i class="icon-yamaxun"></i> icon-yamaxun</li>
+      <li><i class="icon-fanfou"></i> icon-fanfou</li>
+      <li><i class="icon-feixin"></i> icon-feixin</li>
+      <li><i class="icon-weifeng"></i> icon-weifeng</li>
     </ul>
   </div>
 </section>
