更新网站到0.0.3。

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="item"><div><i class="icon-qq"></i></div></div>
       <div class="item"><div><i class="icon-renren"></i></div></div>
       <div class="item"><div><i class="icon-taobao"></i></div></div>
-      <div class="item"><div><i class="icon-tenxunweibo"></i></div></div>
+      <div class="item"><div><i class="icon-tengxunweibo"></i></div></div>
       <div class="item"><div><i class="icon-tmall"></i></div></div>
       <div class="item"><div><i class="icon-tudou"></i></div></div>
       <div class="item"><div><i class="icon-v2ex"></i></div></div>
@@ -81,6 +81,13 @@
       <div class="item"><div><i class="icon-miliao"></i></div></div>
       <div class="item"><div><i class="icon-kds"></i></div></div>
       <div class="item"><div><i class="icon-dongfangweishi"></i></div></div>
+      <div class="item"><div><i class="icon-youzhen"></i></div></div>
+      <div class="item"><div><i class="icon-liantong"></i></div></div>
+      <div class="item"><div><i class="icon-ganji"></i></div></div>
+      <div class="item"><div><i class="icon-fangzheng"></i></div></div>
+      <div class="item"><div><i class="icon-dianxin"></i></div></div>
+      <div class="item"><div><i class="icon-dazhong"></i></div></div>
+      <div class="item"><div><i class="icon-dangdang"></i></div></div>
     </div>
     <!-- Carousel nav -->
     <a class="carousel-control left" href="#iconCarousel" data-slide="prev">
@@ -94,7 +101,7 @@
       <a href="http://fortawesome.github.com/Font-Awesome/" target="_blank">FontAwesome</a> 非官方中文分支</p>
     <div class="actions">
       <a class="btn btn-primary btn-large" href="https://github.com/lexrus/fontdiao/zipball/master">
-        <i class="icon-download"></i>下载 Font屌 v0.0.2</a>
+        <i class="icon-download"></i>下载 Font屌 v0.0.3</a>
       <a class="btn btn-large btn-github" href="https://github.com/lexrus/fontdiao" target="_blank">
         <i class="icon-github"></i>访问 GitHub</a>
     </div>
@@ -152,8 +159,8 @@
   </div>
   <div class="row">
     <div class="span4">
-      <h3><i class="icon-flag icon-large"></i> 一个字体包含 40 多个图标</h3>
-      客户端浏览器只下载一个字体，就能拥有 40 多个常用中文网站的图标。
+      <h3><i class="icon-flag icon-large"></i> 一个字体包含 50 多个图标</h3>
+      客户端浏览器只下载一个字体，就能拥有 50 多个常用中文网站、知名企业的图标。
     </div>
     <div class="span4">
       <h3><i class="icon-gift icon-large"></i> 可用于商业应用</h3>
@@ -201,6 +208,8 @@
       <li><i class="icon-pps"></i> icon-pps</li>
       <li><i class="icon-qicheren"></i> icon-qicheren</li>
       <li><i class="icon-yinlian"></i> icon-yinlian</li>
+      <li><i class="icon-youzhen"></i> icon-youzhen</li>
+      <li><i class="icon-dianxin"></i> icon-dianxin</li>
     </ul>
   </div>
 
@@ -208,7 +217,7 @@
     <ul class="the-icons">
       <li><i class="icon-weibo"></i> icon-weibo</li>
       <li><i class="icon-taobao"></i> icon-taobao</li>
-      <li><i class="icon-tenxunweibo"></i> icon-tenxunweibo</li>
+      <li><i class="icon-tengxunweibo"></i> icon-tengxunweibo</li>
       <li><i class="icon-tmall"></i> icon-tmall</li>
       <li><i class="icon-v2ex"></i> icon-v2ex</li>
       <li><i class="icon-wangyi"></i> icon-wangyi</li>
@@ -216,6 +225,8 @@
       <li><i class="icon-letv"></i> icon-letv</li>
       <li><i class="icon-shanghaidianshitai"></i> icon-shanghaidianshitai</li>
       <li><i class="icon-youdao"></i> icon-youdao</li>
+      <li><i class="icon-liantong"></i> icon-liantong</li>
+      <li><i class="icon-dazhong"></i> icon-dazhong</li>
     </ul>
   </div>
 
@@ -230,6 +241,8 @@
       <li><i class="icon-fenghuangweishi"></i> icon-fenghuangweishi</li>
       <li><i class="icon-kds"></i> icon-kds</li>
       <li><i class="icon-tengxunshipin"></i> icon-tengxunshipin</li>
+      <li><i class="icon-ganji"></i> icon-ganji</li>
+      <li><i class="icon-dangdang"></i> icon-dangdang</li>
     </ul>
   </div>
 
@@ -244,6 +257,7 @@
       <li><i class="icon-fanfou"></i> icon-fanfou</li>
       <li><i class="icon-feixin"></i> icon-feixin</li>
       <li><i class="icon-weifeng"></i> icon-weifeng</li>
+      <li><i class="icon-fangzheng"></i> icon-fangzheng</li>
     </ul>
   </div>
 </section>
@@ -370,7 +384,7 @@
       <a class="btn" href="#"><i class="icon-tudou"></i></a>
       <a class="btn" href="#"><i class="icon-baidu"></i></a>
       <a class="btn" href="#"><i class="icon-weibo"></i></a>
-      <a class="btn" href="#"><i class="icon-tenxunweibo"></i></a>
+      <a class="btn" href="#"><i class="icon-tengxunweibo"></i></a>
     </div>
     </p>
   </div>
@@ -380,7 +394,7 @@
   &lt;a class=&quot;btn&quot; href=&quot;#&quot;&gt;&lt;i class=&quot;icon-tudou&quot;&gt;&lt;/i&gt;&lt;/a&gt;
   &lt;a class=&quot;btn&quot; href=&quot;#&quot;&gt;&lt;i class=&quot;icon-baidu&quot;&gt;&lt;/i&gt;&lt;/a&gt;
   &lt;a class=&quot;btn&quot; href=&quot;#&quot;&gt;&lt;i class=&quot;icon-weibo&quot;&gt;&lt;/i&gt;&lt;/a&gt;
-  &lt;a class=&quot;btn&quot; href=&quot;#&quot;&gt;&lt;i class=&quot;icon-tenxunweibo&quot;&gt;&lt;/i&gt;&lt;/a&gt;
+  &lt;a class=&quot;btn&quot; href=&quot;#&quot;&gt;&lt;i class=&quot;icon-tengxunweibo&quot;&gt;&lt;/i&gt;&lt;/a&gt;
 &lt;/div&gt;
 </pre>
   </div>
