--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@
       <li><i class="icon-feixin"></i> icon-feixin</li>
       <li><i class="icon-weifeng"></i> icon-weifeng</li>
       <li><i class="icon-fangzheng"></i> icon-fangzheng</li>
+      <li><i class="icon-orca"></i> icon-orca</li>
     </ul>
   </div>
 </section>
