增加了一些云服务的图标；修正人人图标和支付宝图标没有居中的问题。

--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
       <li><i class="icon-yinlian"></i> icon-yinlian</li>
       <li><i class="icon-youzhen"></i> icon-youzhen</li>
       <li><i class="icon-dianxin"></i> icon-dianxin</li>
+      <li><i class="icon-yunio"></i> icon-yunio</li>
     </ul>
   </div>
 
@@ -227,6 +228,7 @@
       <li><i class="icon-youdao"></i> icon-youdao</li>
       <li><i class="icon-liantong"></i> icon-liantong</li>
       <li><i class="icon-dazhong"></i> icon-dazhong</li>
+      <li><i class="icon-kanbox"></i> icon-kanbox</li>
     </ul>
   </div>
 
@@ -243,6 +245,8 @@
       <li><i class="icon-tengxunshipin"></i> icon-tengxunshipin</li>
       <li><i class="icon-ganji"></i> icon-ganji</li>
       <li><i class="icon-dangdang"></i> icon-dangdang</li>
+      <li><i class="icon-baiduyun"></i> icon-baiduyun</li>
+      <li><i class="icon-360yunpan"></i> icon-360yunpan</li>
     </ul>
   </div>
 
@@ -259,6 +263,7 @@
       <li><i class="icon-weifeng"></i> icon-weifeng</li>
       <li><i class="icon-fangzheng"></i> icon-fangzheng</li>
       <li><i class="icon-orca"></i> icon-orca</li>
+      <li><i class="icon-jianguoyun"></i> icon-jianguoyun</li>
     </ul>
   </div>
 </section>
