去掉版本号，方便更新。

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <a href="http://fortawesome.github.com/Font-Awesome/" target="_blank">FontAwesome</a> 非官方中文分支</p>
     <div class="actions">
       <a class="btn btn-primary btn-large" href="https://github.com/lexrus/fontdiao/zipball/master">
-        <i class="icon-download"></i>下载 Font屌 v0.0.3</a>
+        <i class="icon-download"></i>下载 Font屌</a>
       <a class="btn btn-large btn-github" href="https://github.com/lexrus/fontdiao" target="_blank">
         <i class="icon-github"></i>访问 GitHub</a>
     </div>
