--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 
   <link rel="stylesheet" href="assets/css/site.css">
   <link rel="stylesheet" href="assets/css/prettify.css">
+  <link rel="stylesheet" href="assets/css/font-awesome.min.css">
 <!--[if IE 7]>
-  <link rel="stylesheet" href="assets/css/font-awesome-ie7.css">
+  <link rel="stylesheet" href="assets/css/font-awesome-ie7.min.css">
 <![endif]-->
   <link rel="stylesheet" href="assets/css/fontdiao.css">
 </head>
@@ -146,7 +147,7 @@
   <div class="row">
     <div class="span4">
       <h3><i class="icon-bullhorn icon-large"></i> <a href="http://fortawesome.github.com/Font-Awesome/" target="_blank">FontAwesome</a> 的中文分支</h3>
-      可与 FontAwesome 同时使用，对中文网站更加友好。
+      可与 FontAwesome 3.0 同时使用，对中文网站更加友好。
     </div>
     <div class="span4">
       <h3><i class="icon-eye-open icon-large"></i> 完美支持 Retina 屏幕</h3>
