俺们村不再流行刷微博了。

--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
         <li><a href="#icons">图标</a></li>
         <li><a href="#integration">集成</a></li>
         <li><a href="#code">代码</a></li>
-        <li><a href="#roadmap">路线</a></li>
       </ul>
       <ul class="nav pull-right">
         <li><a href="mailto:lexrus@gmail.com"><i class="icon-envelope"></i> Lex</a></li>
@@ -98,7 +97,7 @@
   </div>
   <div class="hero-content">
     <h1>Font屌</h1>
-    <p>中文网站前端屌丝码农的逆袭<br/>
+    <p>非主流中文字体<br/>
       <a href="http://fortawesome.github.com/Font-Awesome/" target="_blank">FontAwesome</a> 非官方中文分支</p>
     <div class="actions">
       <a class="btn btn-primary btn-large" href="https://github.com/lexrus/fontdiao/zipball/master">
@@ -117,9 +116,6 @@
     </span>
     <span class="follow">
       <a class="btn" href="http://twitter.com/lexrus/" target="_blank"><i class="icon-twitter"></i> Follow @lexrus</a>
-    </span>
-    <span class="follor">
-      <a class="btn" href="http://weibo.com/lexrus/" target="_blank"><i class="icon-weibo"></i> 关注 @汤圣罡</a>
     </span>
     <!-- JiaThis Button BEGIN -->
       <span class="jiathis_style span4 pull-right">
@@ -523,16 +519,6 @@
 </div>
 </section>
 
-<section id="roadmap">
-  <h1>路线</h1>
-  <p>下面是未来的更新路线。</p>
-  <ul class="icons">
-    <li><i class="icon-plus"></i> 更多的图标，如果有要求请移步 <a href="https://github.com/lexrus/fontdiao/issues" target="_blank">新建 issue</a>。</li>
-    <li><i class="icon-plus"></i> 独立的上传网站，可以自动处理位图和矢量图。</li>
-    <li><i class="icon-plus"></i> 更明确的版权细则、反对使用方法。</li>
-  </ul>
-</section>
-
 <footer>
   <div class="row">
     <div class="span4">
@@ -635,7 +621,7 @@
 <script type="text/javascript" >
 var jiathis_config={
   url:"http://lexrus.github.com/fontdiao",
-  title:"#Font屌#中文网站前端屌丝码农的逆袭",
+  title:"#Font屌#非主流中文字体",
   ralateuid:{
     "tsina":"1747002695"
   },
