--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- Basic Page Needs
  ================================================== -->
   <meta charset="utf-8" />
-  <title>Font屌</title>
+  <title>Font屌 Alpha</title>
   <meta name="description" content="">
   <meta name="author" content="">
 <!--[if lt IE 9]>
